src/test/deca/context/invalid/created/passe1_4.deca
// Description:
//    teste la declaration d'une classe en tant qu'extension d'un type qui n'est pas une classe
// Resultats:
//    Erreur contextuelle
//    Ligne 7 : Error: The parent is not a class

class A extends void {

}

{

}